--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Full Stack Designer">
     
     
-    <link rel="preload" href="/assets/css/0.styles.7c693588.css" as="style"><link rel="preload" href="/assets/js/app.1290e7fc.js" as="script"><link rel="preload" href="/assets/js/2.9310517f.js" as="script"><link rel="preload" href="/assets/js/6.d4810a4b.js" as="script"><link rel="prefetch" href="/assets/js/10.6aaad142.js"><link rel="prefetch" href="/assets/js/11.9f237690.js"><link rel="prefetch" href="/assets/js/3.07d1945c.js"><link rel="prefetch" href="/assets/js/4.1069f4ef.js"><link rel="prefetch" href="/assets/js/5.3b244b49.js"><link rel="prefetch" href="/assets/js/7.c9c5b713.js"><link rel="prefetch" href="/assets/js/8.2a30ea0a.js"><link rel="prefetch" href="/assets/js/9.b5dc44a8.js">
+    <link rel="preload" href="/assets/css/0.styles.7c693588.css" as="style"><link rel="preload" href="/assets/js/app.3707ec91.js" as="script"><link rel="preload" href="/assets/js/2.f3926dd4.js" as="script"><link rel="preload" href="/assets/js/7.7f2b5966.js" as="script"><link rel="prefetch" href="/assets/js/10.359ef510.js"><link rel="prefetch" href="/assets/js/11.a2acf603.js"><link rel="prefetch" href="/assets/js/12.5bc1aeb2.js"><link rel="prefetch" href="/assets/js/13.f0f98087.js"><link rel="prefetch" href="/assets/js/3.5b71fdc7.js"><link rel="prefetch" href="/assets/js/4.a5bd0068.js"><link rel="prefetch" href="/assets/js/5.d9ea211e.js"><link rel="prefetch" href="/assets/js/6.5ce557e1.js"><link rel="prefetch" href="/assets/js/8.64ba1041.js"><link rel="prefetch" href="/assets/js/9.f840e0dd.js">
     <link rel="stylesheet" href="/assets/css/0.styles.7c693588.css">
   </head>
   <body>
@@ -20,6 +20,6 @@
     </p> <p class="action"><a href="/portfolio/" class="nav-link action-button">Portfolio →</a></p></header> <div class="features"><div class="feature"><h2>Ritualin</h2> <p>Gründer und Geschäftsführer</p></div><div class="feature"><h2>Stack</h2> <p>VueJS, VuetifyJS, Firebase, JavaScript, NodeJS, Cordova, Webpack, Babel</p></div><div class="feature"><h2>Deutschland</h2> <p>München / Köln / Berlin</p></div></div> <div class="theme-default-content custom content__default"></div> <div class="footer">
     © Andre Fuchs | Full Stack Designer
   </div></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.1290e7fc.js" defer></script><script src="/assets/js/2.9310517f.js" defer></script><script src="/assets/js/6.d4810a4b.js" defer></script>
+    <script src="/assets/js/app.3707ec91.js" defer></script><script src="/assets/js/2.f3926dd4.js" defer></script><script src="/assets/js/7.7f2b5966.js" defer></script>
   </body>
 </html>
