--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Andre Fuchs</title>
-    <meta name="description" content="Full Stack Designer">
+    <meta name="description" content="Graphic Designer, Developer &amp; Founder of Ritualin">
     
     
-    <link rel="preload" href="/assets/css/0.styles.7c693588.css" as="style"><link rel="preload" href="/assets/js/app.3707ec91.js" as="script"><link rel="preload" href="/assets/js/6.5ce557e1.js" as="script"><link rel="prefetch" href="/assets/js/10.359ef510.js"><link rel="prefetch" href="/assets/js/11.a2acf603.js"><link rel="prefetch" href="/assets/js/12.5bc1aeb2.js"><link rel="prefetch" href="/assets/js/13.f0f98087.js"><link rel="prefetch" href="/assets/js/2.f3926dd4.js"><link rel="prefetch" href="/assets/js/3.5b71fdc7.js"><link rel="prefetch" href="/assets/js/4.a5bd0068.js"><link rel="prefetch" href="/assets/js/5.d9ea211e.js"><link rel="prefetch" href="/assets/js/7.7f2b5966.js"><link rel="prefetch" href="/assets/js/8.64ba1041.js"><link rel="prefetch" href="/assets/js/9.f840e0dd.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.7c693588.css">
+    <link rel="preload" href="/assets/css/0.styles.019fe3db.css" as="style"><link rel="preload" href="/assets/js/app.68803c2e.js" as="script"><link rel="preload" href="/assets/js/4.6a54c044.js" as="script"><link rel="prefetch" href="/assets/js/2.5d432c1b.js"><link rel="prefetch" href="/assets/js/3.c2e69bb6.js"><link rel="prefetch" href="/assets/js/5.207c075c.js"><link rel="prefetch" href="/assets/js/6.52fd75a4.js"><link rel="prefetch" href="/assets/js/7.839ed582.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.019fe3db.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.3707ec91.js" defer></script><script src="/assets/js/6.5ce557e1.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.68803c2e.js" defer></script><script src="/assets/js/4.6a54c044.js" defer></script>
   </body>
 </html>
