--- a/download/free-vuetify-prelaunch-landing-page-template.html
+++ b/download/free-vuetify-prelaunch-landing-page-template.html
@@ -28,7 +28,7 @@
                         <v-row align="center" class="mx-auto" justify="center">
                             <v-col class="text-center" cols="12" tag="h1">
                                 <v-avatar tile size="96" class="mb-3">
-                                    <v-img src="download/rocket.svg"></v-img>
+                                    <v-img src="/rocket.svg"></v-img>
                                 </v-avatar>
 
                                 <div></div>
